cluster/apps/airsonic-advanced/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airsonic-advanced
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airsonic-advanced
  template:
    metadata:
      labels:
        app: airsonic-advanced
    spec:
      containers:
        - name: airsonic-advanced
          image: ghcr.io/airsonic-advanced/airsonic-advanced:gitrun-8809770505
          ports:
            - containerPort: 80
