cluster/apps/airsonic-advanced/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airsonic-advanced-service
spec:
  selector:
    app: airsonic-advanced
  ports:
    - port: 4040
      targetPort: 4040
---
apiVersion: v1
kind: Service
metadata:
  name: airsonic-refix-service
spec:
  selector:
    app: airsonic-advanced
  ports:
    - port: 80
      targetPort: 80
