cluster/apps/airsonic-advanced/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airsonic-advanced-ingress
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airsonic-advanced-service
                port:
                  number: 4040
  tls:
    - hosts:
        - airsonic-advanced
